Added excel output functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ export(hello)
 export(new_deposit_dataset)
 importFrom(Rcpp,sourceCpp)
 importFrom(magrittr,"%>%")
+importFrom(openxlsx,write.xlsx)
 useDynLib(depositWatch, .registration = TRUE)
