--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,12 @@ export(new_deposit_dataset)
 export(plot)
 import(ggplot2)
 importFrom(Rcpp,sourceCpp)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,n_distinct)
+importFrom(dplyr,summarise)
 importFrom(lubridate,floor_date)
 importFrom(magrittr,"%>%")
 importFrom(openxlsx,write.xlsx)
+importFrom(tidyr,separate_rows)
 useDynLib(depositWatch, .registration = TRUE)
